BEAUT-1408: [BUG-Beautify][Mobile] Duplicate event drop down list is spilled out when the long event name

--- a/beautify-la/src/assets/css/sass/components/bootstrap/_selectpicker.scss
+++ b/beautify-la/src/assets/css/sass/components/bootstrap/_selectpicker.scss
@@ -89,6 +89,7 @@
         box-shadow: none;
         font-size: 20px;
         border-color: #ccc;
+        width: 100%;
 
         &.inner {
             overflow-y:hidden !important;
@@ -102,6 +103,9 @@
             }
 
             a {
+                overflow: hidden;
+                text-overflow: ellipsis;
+
                 &:hover {
                     background: transparent;
                     color: $positive;
